--- a/app/src/main/res/layout/activity_choise_city.xml
+++ b/app/src/main/res/layout/activity_choise_city.xml
@@ -14,7 +14,7 @@
         android:ems="10"
         android:hint="Введите город"
         android:inputType="text"
-        android:textSize="50px"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Добавить"
-        android:textSize="50px"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
