--- a/app/src/main/res/layout/activity_data_detail.xml
+++ b/app/src/main/res/layout/activity_data_detail.xml
@@ -15,12 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle = "bold"
        />
     <TextView
         android:id="@+id/tempDataD"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
