--- a/app/src/main/res/layout/data_item.xml
+++ b/app/src/main/res/layout/data_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200px"
+    android:layout_height="80dp"
     android:padding="10dp"
 
     android:layout_margin="4dp"
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:textSize="15dp"
+        android:textSize="15sp"
 
         android:gravity="start"
 
@@ -40,7 +40,7 @@
         android:layout_gravity="end"
 
         android:fontFamily="sans-serif"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
        />
