--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
-    android:layout_height="200px"
+    android:layout_height="80dp"
     android:padding="10dp"
     android:background="@color/white"
     android:layout_margin="4dp"
@@ -22,7 +22,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:text="Орел"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,7 +34,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:text="20 C"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
