--- a/app/src/main/res/layout/activity_choise_city.xml
+++ b/app/src/main/res/layout/activity_choise_city.xml
@@ -12,7 +12,7 @@
         android:layout_width="278dp"
         android:layout_height="86dp"
         android:ems="10"
-        android:hint="Введите город"
+        android:hint="@string/hint_choise_city"
         android:inputType="text"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +26,7 @@
         android:id="@+id/act_choise_city_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Добавить"
+        android:text="@string/btn_choise_city"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
